--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <h1>Tic Tac Toe</h1>
     <!-- <div class="overlay-trigger"></div> -->
     <div class="controlUnit">
-      <h4 class="advice">Refresh Page To Reset Game</h4>
+      <h4 class="advice">Reset Game</h4><br>
       <span class="pc">Computer Mode: <button class="mode">OFF</button></span>
       <span class="blinkingLight">.</span>
+      
     </div>
     <div class="grid-container">
       <div class="grid-item item-1"></div>
@@ -27,7 +28,7 @@
       <div class="grid-item item-9"></div>
     </div>
     <div class="message">
-      <div class="greeting">Congratulation!</div>
+      <div class="greeting"></div>
       <div class="anouncement"></div>
       <button class="playAgain">Play Again</button>
     </div>
