--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h4 class="advice">Reset Game</h4><br>
       <span class="pc">Computer Mode: <button class="mode">OFF</button></span>
       <span class="blinkingLight">.</span>
-      
+      <div class="score"><span>X(</span><span class="X-score">0</span>)<span> - tie(</span><span class="tie-score">0</span><span>)</span><span> - O(</span><span class="O-score">0</span><span>)</span></div>
     </div>
     <div class="grid-container">
       <div class="grid-item item-1"></div>
